[gd_scene load_steps=12 format=3 uid="uid://bt4sdv27yeoku"]

[ext_resource type="Script" uid="uid://xsm88hofruub" path="res://scenes/ui/pinpad/pc_passcode.gd" id="1_isg46"]
[ext_resource type="Texture2D" uid="uid://baxgykyjalxpe" path="res://assets/sprites/Pinpad/plancia enigma simboli.png" id="2_386ce"]
[ext_resource type="Texture2D" uid="uid://f6bmww1staiu" path="res://assets/sprites/Pinpad/Simbolo1_2.png" id="3_isg46"]
[ext_resource type="Texture2D" uid="uid://djf7wox5k8p28" path="res://assets/sprites/Pinpad/Simbolo2_2.png" id="4_386ce"]
[ext_resource type="Texture2D" uid="uid://yotkr1arjmul" path="res://assets/sprites/Pinpad/Simbolo3_2.png" id="5_yc0lb"]
[ext_resource type="Texture2D" uid="uid://80vikg6io1m0" path="res://assets/sprites/Pinpad/Simbolo4_2.png" id="6_x7nn8"]
[ext_resource type="Texture2D" uid="uid://cjour3csd55qd" path="res://assets/sprites/Pinpad/Simbolo5_2.png" id="7_lrmkj"]
[ext_resource type="Texture2D" uid="uid://dabtt7a3jvq77" path="res://assets/sprites/Pinpad/Simbolo6_2.png" id="8_w1jhx"]
[ext_resource type="Texture2D" uid="uid://cuulyffyew1ia" path="res://assets/sprites/Pinpad/Simbolo7_2.png" id="9_8ku2u"]
[ext_resource type="Texture2D" uid="uid://cap6ihngxdbor" path="res://assets/sprites/ui/bottone su.png" id="10_yc0lb"]
[ext_resource type="Texture2D" uid="uid://dbrava2qun55l" path="res://assets/sprites/ui/bottone giu.png" id="11_x7nn8"]

[node name="Pinpad" type="Control"]
z_index = 5
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_isg46")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(754, 545)
scale = Vector2(0.8191, 0.78392)
texture = ExtResource("2_386ce")

[node name="Slot1" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 395.0
offset_top = 831.0
offset_right = 552.0
offset_bottom = 1089.0
scale = Vector2(0.3, 0.3)
stretch_mode = 3

[node name="Slot2" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 569.0
offset_top = 830.0
offset_right = 713.0
offset_bottom = 1095.0
scale = Vector2(0.3, 0.3)
stretch_mode = 3

[node name="Slot3" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 735.0
offset_top = 834.0
offset_right = 886.0
offset_bottom = 1093.0
scale = Vector2(0.3, 0.3)
stretch_mode = 3

[node name="Slot4" type="TextureRect" parent="."]
layout_mode = 0
offset_left = 903.0
offset_top = 830.0
offset_right = 1057.0
offset_bottom = 1091.0
scale = Vector2(0.3, 0.3)
stretch_mode = 3

[node name="Buttons" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 252.0
offset_top = 247.0
offset_right = 483.0
offset_bottom = 636.0

[node name="TextureButton" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 348.0
offset_top = -209.0
offset_right = 554.0
offset_bottom = -29.0

[node name="Sprite2D" type="Sprite2D" parent="Buttons"]
position = Vector2(436, -121)
scale = Vector2(0.3, 0.3)
texture = ExtResource("3_isg46")

[node name="TextureButton2" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 622.0
offset_top = -149.0
offset_right = 828.0
offset_bottom = 31.0

[node name="Sprite2D2" type="Sprite2D" parent="Buttons"]
position = Vector2(721, -67)
scale = Vector2(0.3, 0.3)
texture = ExtResource("4_386ce")

[node name="TextureButton3" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 97.0
offset_top = -64.0
offset_right = 303.0
offset_bottom = 116.0

[node name="Sprite2D3" type="Sprite2D" parent="Buttons"]
position = Vector2(210, 32)
scale = Vector2(0.3, 0.3)
texture = ExtResource("5_yc0lb")

[node name="TextureButton4" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 377.0
offset_top = 34.0
offset_right = 583.0
offset_bottom = 214.0

[node name="Sprite2D4" type="Sprite2D" parent="Buttons"]
position = Vector2(477, 123)
scale = Vector2(0.3, 0.3)
texture = ExtResource("6_x7nn8")

[node name="TextureButton5" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 644.0
offset_top = 99.0
offset_right = 850.0
offset_bottom = 279.0

[node name="Sprite2D5" type="Sprite2D" parent="Buttons"]
position = Vector2(745, 180)
scale = Vector2(0.3, 0.3)
texture = ExtResource("7_lrmkj")

[node name="TextureButton6" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 148.0
offset_top = 194.0
offset_right = 354.0
offset_bottom = 374.0

[node name="Sprite2D6" type="Sprite2D" parent="Buttons"]
position = Vector2(236, 278)
scale = Vector2(0.3, 0.3)
texture = ExtResource("8_w1jhx")

[node name="TextureButton7" type="Button" parent="Buttons"]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 423.0
offset_top = 277.0
offset_right = 629.0
offset_bottom = 457.0

[node name="Sprite2D7" type="Sprite2D" parent="Buttons"]
position = Vector2(527, 367)
scale = Vector2(0.3, 0.3)
texture = ExtResource("9_8ku2u")

[node name="TextureButton" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1350.0
offset_top = 78.0
offset_right = 2448.0
offset_bottom = 443.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("10_yc0lb")
texture_pressed = ExtResource("11_x7nn8")
texture_hover = ExtResource("11_x7nn8")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 150
text = "GO BACK"
horizontal_alignment = 1
vertical_alignment = 1

[node name="TextureButton2" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1363.0
offset_top = 751.0
offset_right = 2461.0
offset_bottom = 1116.0
scale = Vector2(0.4, 0.4)
texture_normal = ExtResource("10_yc0lb")
texture_pressed = ExtResource("11_x7nn8")
texture_hover = ExtResource("11_x7nn8")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureButton2"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_font_sizes/normal_font_size = 150
text = "CANCEL"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="Buttons/TextureButton" to="." method="_on_texture_button_pressed"]
[connection signal="pressed" from="Buttons/TextureButton2" to="." method="_on_texture_button_2_pressed"]
[connection signal="pressed" from="Buttons/TextureButton3" to="." method="_on_texture_button_3_pressed"]
[connection signal="pressed" from="Buttons/TextureButton4" to="." method="_on_texture_button_4_pressed"]
[connection signal="pressed" from="Buttons/TextureButton5" to="." method="_on_texture_button_5_pressed"]
[connection signal="pressed" from="Buttons/TextureButton6" to="." method="_on_texture_button_6_pressed"]
[connection signal="pressed" from="Buttons/TextureButton7" to="." method="_on_texture_button_7_pressed"]
[connection signal="pressed" from="TextureButton" to="." method="_on_back_button_pressed"]
[connection signal="pressed" from="TextureButton2" to="." method="_on_cancel_pressed"]
